GNOME Bugzilla – Bug 608345
Wrong reference on gdk_keymap_translate_keyboard_state
Last modified: 2010-02-09 11:25:26 UTC
Created attachment 152490 [details] [review] Proposed solution The documentation of this function has this sentence: "See gdk_keyval_get_keys() for a explanation of groups and levels" But gdk_keyval_get_keys doesn't exists. You can find the explanation of groups and levels at the description section on http://library.gnome.org/devel/gdk/unstable/gdk-Keyboard-Handling.html A proposed patch, with a provisional solution is attached.
We should make that a link, probably by using <link> or <xref>
Created attachment 152574 [details] [review] Updated patch Updated patch after Mathias Clasen comment. The final output in the doc file is: "See the section called “Description” for an explanation of groups and levels".
(In reply to comment #2) > Created an attachment (id=152574) [details] [review] > Updated patch > > Updated patch after Mathias Clasen comment. Sorry, I mean Matthias Clasen comment.
Comment on attachment 152574 [details] [review] Updated patch Looks good.
(In reply to comment #4) > (From update of attachment 152574 [details] [review]) > Looks good. Ok, so applying the patch and closing the bug. Thanks.