Solve a wrong reference on gdk_keymap_translate_keyboard_state

Solves https://bugzilla.gnome.org/show_bug.cgi?id=608345